--- a/blog/2026-01-28T04:41:40.049Z-deep-learning-shallow-use-how-ai-is-eroding-the-creativity-that-built-it.mdx
+++ b/blog/2026-01-28T04:41:40.049Z-deep-learning-shallow-use-how-ai-is-eroding-the-creativity-that-built-it.mdx
@@ -396,7 +396,7 @@ And if our AI can't help us do that, what's the point of building it at all?
 
 Enjoyed this article? Share your thoughts in the comments below. Found it useful? Subscribe for weekly technical deep-dives.
 
-**Source:** [Read the original discussion](null)
+**Source:** [Read the original discussion]
 
 ---
 
