--- a/blog/2026-01-28T04:41:40.049Z-deep-learning-shallow-use-how-ai-is-eroding-the-creativity-that-built-it.mdx
+++ b/blog/2026-01-28T04:41:40.049Z-deep-learning-shallow-use-how-ai-is-eroding-the-creativity-that-built-it.mdx
@@ -1,6 +1,6 @@
 ---
 slug: deep-learning-shallow-use-how-ai-is-eroding-the-creativity-that-built-it
-title: "“Deep Learning, Shallow Use: How AI Is Eroding the Creativity That Built It”"
+title: Deep Learning, Shallow Use, How AI Is Eroding the Creativity That Built It
 authors: [francis]
 tags: [we built thinking machines with deep intelligence — and now we use them thoughtlessly.]
 date: 2026-01-28T04:42:09.900Z
