--- a/blog/2026-01-28T04:41:40.049Z-deep-learning-shallow-use-how-ai-is-eroding-the-creativity-that-built-it.mdx
+++ b/blog/2026-01-28T04:41:40.049Z-deep-learning-shallow-use-how-ai-is-eroding-the-creativity-that-built-it.mdx
@@ -16,7 +16,7 @@ import Newsletter from "@site/src/components/Newsletter";
 
 
 
-## The Great Irony: How We're Using the World's Most Creative Technology to Kill Creativity
+### The Great Irony: How We're Using the World's Most Creative Technology to Kill Creativity
 
 
 ---
@@ -115,7 +115,7 @@ Here's a fun exercise: Ask a deep learning researcher to explain *exactly* why t
 
 Watch them squirm.
 
-The cutting edge of AI lives in a space where performance and comprehension are inversely related. The better the model works, the less we understand why. **We've built machines that are smarter than us in specific ways, but we can't access that intelligence—we can only worship its outputs.**
+The cutting edge of AI lives in a space where performance and comprehension are inversely related. The better the model works, the less we understand why. **We've built machines that are smarter than us in specific ways, but we can't access that intelligence, we can only worship its outputs.**
 
 This creates a bizarre situation:
 
