--- a/docs/AI Cybersecurity Engineer.mdx
+++ b/docs/AI Cybersecurity Engineer.mdx
@@ -146,7 +146,7 @@ This program trains engineers to reason about **entire AI systems under adversar
 
 ### Projects
 1. **Deep Learning Malware Detection Engine**
-2. **Transformer-Based IDS (<1ms latency)**
+2. **Transformer-Based IDS (&lt;1ms latency)**
 
 ---
 
