--- a/docs/AI Cybersecurity Engineer.mdx
+++ b/docs/AI Cybersecurity Engineer.mdx
@@ -1,300 +1,156 @@
 ---
 slug: ai-security-engineer-bootcamp-and-certification-stfrancis-labs
-title: "The AI Security Engineer Bootcamp & Certification Ladder"
+title: "AI Security Engineer Bootcamp & Certification Ladder"
 authors: [francis]
-tags: [
-  ai-security,
-  adversarial-ml,
-  llm-security,
-  agent-security,
-  red-teaming,
-  governance,
-  certification,
-  bootcamp
-]
+tags:
+  - ai-security
+  - adversarial-ml
+  - llm-security
+  - agent-security
+  - red-teaming
+  - governance
+  - certification
+  - bootcamp
 date: 2026-01-28T02:45:00.000Z
-description: "A complete, project-driven AI Security Engineer bootcamp and certification ladder delivered by StFrancis Labs—designed for enterprise, research, and startup-grade AI systems."
+description: "Enterprise-grade AI Security Engineer bootcamp and certification program delivering systems-level security expertise."
 image: /img/blog/default-post.jpg
 ---
-
-<!--truncate-->
 
 import SocialShare from "@site/src/components/SocialShare";
 import GiscusComments from "@site/src/components/GiscusComments";
 import Newsletter from "@site/src/components/Newsletter";
 
-# The AI Security Engineer Bootcamp & Certification Ladder
-**Delivered by StFrancis Labs**
+# AI Security Engineer Bootcamp & Certification Ladder
+### Delivered by StFrancis Labs
 
-Artificial intelligence systems now operate in adversarial, high-stakes environments: they make decisions, invoke tools, control workflows, and increasingly act autonomously. As these systems scale, their **failure modes scale with them**.
+AI systems now operate in adversarial environments—making decisions, controlling workflows, and acting autonomously. Their failure modes scale alongside their capabilities.
 
-Yet most training programs still treat AI security as an afterthought—either bolted onto traditional cybersecurity or reduced to abstract ML theory.
+Most training programs treat AI security as an afterthought. **This program fixes that.**
 
-**StFrancis Labs exists to fix that.**
+## 🎯 Program Overview
 
-This bootcamp is a **project-driven, enterprise-grade training and certification program** designed to produce engineers who can **design, attack, defend, govern, and deploy secure AI systems at scale**.
+| Detail | Specification |
+|--------|---------------|
+| **Format** | Modular · Cohort/Self-Paced |
+| **Duration** | 18–24 months |
+| **Outcome** | AI Security Engineer → Principal → Architect |
+| **Model** | Build → Break → Defend → Govern |
 
----
-
-## Program Overview
-
-**Program Name:** AI Security Engineer Bootcamp
-**Delivered by:** StFrancis Labs
-**Format:** Modular · Cohort-based or Self-Paced
-**Duration:** 18–24 months
-
-**Outcome Pathway:**
-AI Security Engineer → Principal Engineer → Architect / Founder
-
-**Teaching Model:**
-**Build → Break → Defend → Govern**
-
-This is not a shortcut program. It is a **systems-level apprenticeship**.
+*This is a systems-level apprenticeship, not a shortcut.*
 
 ---
 
-## Why This Program Exists
+## 📚 Curriculum
 
-Most AI and cybersecurity programs fail in the same ways:
+### Module 0: Foundations
+**Certification:** C-AISSA (AI Systems Security Associate)  
+**Timeline:** 2–4 weeks  
+**Skills:** ML threat modeling, data poisoning, secure pipelines  
+**Project:** Secure ML Systems Baseline  
 
-- AI is taught without adversaries
-- Security is taught without models, agents, or data pipelines
-- Systems are fragmented into silos
-- Governance is discussed but never engineered
+### Module 1: Adversarial ML  
+**Certification:** C-AMLE (Adversarial ML Engineer)  
+**Timeline:** 8–10 weeks  
+**Skills:** Gradient attacks, robust training, evaluation  
+**Projects:** Attack Framework, Robustness Dashboard  
 
-In real deployments, AI failures emerge from **interactions** between models, data, infrastructure, agents, users, incentives, and attackers.
+### Module 2: LLM & Agent Security
+**Certification:** C-LASS (LLM & Agent Security Specialist)  
+**Timeline:** 8–10 weeks  
+**Skills:** Prompt injection, tool misuse, containment  
+**Projects:** Jailbreak Detection API, Agent Containment System  
 
-This program trains engineers to reason about **entire AI systems under adversarial pressure**.
+### Module 3: AI Cyber Defense
+**Certification:** C-AICDE (AI Cyber Defense Engineer)  
+**Timeline:** 10–12 weeks  
+**Skills:** Malware classification, intrusion detection, real-time inference  
+**Projects:** Malware Detection Engine, Transformer-Based IDS  
 
----
+### Module 4: Offensive AI
+**Certification:** C-AIRTO (AI Red Team Operator)  
+**Timeline:** 10–12 weeks  
+**Skills:** AI-powered pentesting, model extraction, data poisoning  
+**Projects:** Pentesting Framework, Model Extraction System  
 
-# 🏗️ Bootcamp Curriculum (Project-First)
+### Module 5: Governance & Compliance
+**Certification:** C-AIRGP (AI Risk & Governance Professional)  
+**Timeline:** 6–8 weeks  
+**Skills:** Federated learning, differential privacy, compliance automation  
+**Projects:** Privacy-Preserving FL System, GRC Engine  
 
-## MODULE 0 — Secure AI Systems Foundations
+### Module 6: Security Architecture
+**Certification:** C-AISA (AI Security Architect)  
+**Timeline:** 6–8 weeks  
+**Skills:** Risk quantification, formal verification, certified robustness  
+**Projects:** Abuse Economics Simulator, Robustness Certification Tool  
 
-**Timeline:** 2–4 weeks
-**Certification:** *Certified AI Systems Security Associate (C-AISSA)*
-
-### What students learn
-- ML threat modeling
-- Data poisoning and supply-chain risk
-- Secure ML pipelines
-- Model lifecycle security
-
-### Capstone Project
-**Secure ML Systems Baseline**
-- Threat-model an end-to-end ML pipeline
-- Implement dataset provenance checks
-- Build signed model artifacts and reproducible builds
-
-**Graduate can say:**
-> “I understand how AI systems fail *before* attackers exploit them.”
-
----
-
-## MODULE 1 — Adversarial Machine Learning
-
-**Timeline:** 8–10 weeks
-**Certification:** *Certified Adversarial ML Engineer (C-AMLE)*
-
-### Core skills
-- Gradient-based attacks (FGSM, PGD, C&W)
-- Black-box vs white-box threat models
-- Robust training and evaluation techniques
-
-### Projects
-1. **Adversarial Vision Attack Framework**
-2. **Robustness Evaluation Dashboard**
-
-### Assessment
-- Attack success rate
-- Defense trade-off analysis
-- Explicit failure case documentation
+### Module 7: Capstone
+**Certification:** C-PAISE (Principal AI Security Engineer)  
+**Timeline:** 4–6 months  
+**Options:** Zero-Trust Platform, Red Team Suite, Security Benchmark  
+**Requirements:** Live demo, threat model, executive report  
 
 ---
 
-## MODULE 2 — LLM & Agent Security
+## 🎓 Certification Ladder
 
-**Timeline:** 8–10 weeks
-**Certification:** *Certified LLM & Agent Security Specialist (C-LASS)*
-
-### Core skills
-- Prompt injection and jailbreak techniques
-- Tool misuse and agent escape paths
-- Prompt-chain integrity verification
-- Runtime containment and kill-switch design
-
-### Projects
-1. **LLM Jailbreak Detection API**
-2. **Autonomous Agent Containment System**
-
-**Graduate can say:**
-> “I can secure AI agents operating in real environments.”
-
----
-
-## MODULE 3 — AI-Driven Cyber Defense
-
-**Timeline:** 10–12 weeks
-**Certification:** *Certified AI Cyber Defense Engineer (C-AICDE)*
-
-### Core skills
-- Malware classification with deep learning
-- Network intrusion detection
-- Real-time ML inference pipelines
-- Adversarial evasion techniques
-
-### Projects
-1. **Deep Learning Malware Detection Engine**
-2. **Transformer-Based IDS (&lt;1ms latency)**
-
----
-
-## MODULE 4 — Offensive AI & Red Teaming
-
-**Timeline:** 10–12 weeks
-**Certification:** *Certified AI Red Team Operator (C-AIRTO)*
-
-### Core skills
-- AI-powered penetration testing
-- Model extraction attacks
-- Data poisoning and backdoor insertion
-- Automated reporting and severity scoring
-
-### Projects
-1. **AI-Powered Penetration Testing Framework**
-2. **Model Extraction & Defense System**
-
----
-
-## MODULE 5 — Privacy, Governance & Compliance
-
-**Timeline:** 6–8 weeks
-**Certification:** *Certified AI Risk & Governance Professional (C-AIRGP)*
-
-### Core skills
-- Federated learning security
-- Differential privacy
-- AI governance frameworks
-- Audit and compliance automation
-
-### Projects
-1. **Privacy-Preserving Federated Learning System**
-2. **AI Governance, Risk & Compliance Engine**
-
----
-
-## MODULE 6 — Economics & Formal Security Guarantees
-
-**Timeline:** 6–8 weeks
-**Certification:** *Certified AI Security Architect (C-AISA)*
-
-### Core skills
-- AI abuse economics
-- Risk quantification
-- Formal verification methods
-- Certified robustness guarantees
-
-### Projects
-1. **AI Abuse Economics Simulator**
-2. **Adversarial Robustness Certification Tool**
-
----
-
-## MODULE 7 — Capstone: Startup-Grade Systems
-
-**Timeline:** 4–6 months
-**Certification:** *Certified Principal AI Security Engineer (C-PAISE)*
-
-### Capstone Options (choose ONE)
-- **Zero-Trust AI Security Platform (SaaS MVP)**
-- **AI Red Team Automation Suite**
-- **Open AI Security Benchmark (Public Platform)**
-
-### Requirements
-- Live technical demo
-- Formal threat model
-- Executive-level report
-- Monetization or deployment strategy
-
----
-
-# 🎓 Certification Ladder (Issued by StFrancis Labs)
-
-| Level | Certification | Target Role |
-|------|--------------|------------|
+| Level | Certification | Role |
+|-------|--------------|------|
 | 1 | C-AISSA | AI Security Associate |
 | 2 | C-AMLE | Adversarial ML Engineer |
-| 3 | C-LASS | LLM / Agent Security Engineer |
+| 3 | C-LASS | LLM/Agent Security Engineer |
 | 4 | C-AICDE | AI Cyber Defense Engineer |
 | 5 | C-AIRTO | AI Red Team Specialist |
 | 6 | C-AIRGP | AI Risk & Compliance Lead |
 | 7 | C-AISA | AI Security Architect |
-| 8 | C-PAISE | Principal / Head of AI Security |
+| 8 | C-PAISE | Principal/Head of AI Security |
 
 ---
 
-## 🧪 Exam & Validation Model
-
-Every certification requires:
-
+## 🧪 Validation Model
+**No multiple-choice-only certifications.** Each requires:
 - Project submission
-- Attack and defense demonstration
+- Attack/defense demonstration
 - Threat model documentation
-- Oral defense (recorded or live)
-- Explicit failure analysis
-
-There are **no multiple-choice-only certifications**.
+- Oral defense
+- Failure analysis
 
 ---
 
-## 💰 Pricing Strategy (Realistic & Market-Aligned)
+## 💰 Pricing
 
-- Associate certifications: **$300–$600**
-- Specialist certifications: **$800–$1,500**
-- Architect-level certification: **$2,000–$3,500**
-- Principal / Capstone certification: **$5,000–$10,000**
+| Tier | Certification | Price Range |
+|------|--------------|-------------|
+| Entry | Associate | $300–$600 |
+| Mid | Specialist | $800–$1,500 |
+| Senior | Architect | $2,000–$3,500 |
+| Principal | Capstone | $5,000–$10,000 |
 
-This program is priced for **serious engineers, employers, and founders**.
+*Priced for serious engineers, employers, and founders.*
 
 ---
 
-## 🧠 Positioning Statement
-
+## 🎯 Positioning
 > “This program certifies engineers who can **design, attack, defend, govern, and deploy secure AI systems at scale**.”
 
-This is the standard StFrancis Labs enforces.
+### Why StFrancis Labs
+Founded on the belief: **Intelligence without control is a liability.**
 
----
+As AI systems grow more powerful, security is foundational—not optional. This program trains engineers who keep pace with capability without sacrificing responsibility.
 
-## Why StFrancis Labs
-
-StFrancis Labs was founded on a simple belief:
-
-> **Intelligence without control is a liability.**
-
-As AI systems grow more powerful, security is no longer optional, reactive, or peripheral. It is foundational. This program exists to train engineers who can keep pace with capability **without sacrificing responsibility**.
-
----
-
-## Conclusion: Security Is the Cost of Intelligence
-
-The future will not be secured by those who merely *use* AI tools, but by those who understand their limits, incentives, and adversarial dynamics.
-
-That is the engineer this program trains.
+**Security is the cost of intelligence.**
 
 ---
 
 <SocialShare
-  title="The AI Security Engineer Bootcamp & Certification Ladder"
+  title="AI Security Engineer Bootcamp & Certification Ladder"
   slug="ai-security-engineer-bootcamp-and-certification-stfrancis-labs"
 />
 
 ---
 
 ## 💬 Join the Conversation
-
-Hard questions, critiques, and serious discussion are welcome.
+Hard questions, critiques, and serious discussion welcome.
 
 <GiscusComments />
 
@@ -302,7 +158,7 @@ Hard questions, critiques, and serious discussion are welcome.
 
 <Newsletter
   title="🚀 StFrancis Labs Updates"
-  description="Weekly deep dives on adversarial ML, LLM security, agent containment, and AI governance."
+  description="Weekly deep dives on adversarial ML, LLM security, and AI governance."
   buttonText="Subscribe"
   theme="secondary"
 />
